<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>eapli</groupId>
    <artifactId>base</artifactId>
    <version>1.4.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
		<eapli.framework.core.version>v18.1.0_CORE</eapli.framework.core.version>
		<eapli.framework.authz.version>v17.4.0_AUTHZ</eapli.framework.authz.version>
		<eapli.framework.pubsub.version>v16.7.0_PUBSUB</eapli.framework.pubsub.version>
        
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
<!--        <release>11</release>-->
        <java.version>11</java.version>
    </properties>

    <modules>
        <module>base.app.backoffice.console</module>
        <module>base.app.user.console</module>
        <module>base.app.other.console</module>
        <module>base.app.common.console</module>
        <module>base.app.bootstrap</module>
        <module>base.bootstrappers</module>
        <module>base.core</module>
        <module>base.persistence.impl</module>
        <module>base.app.agvManager</module>
        <module>base.app.agvTwin</module>
    </modules>

    <build>
        <plugins>
            <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
            </plugin>
        </plugins>


    </build>



    <dependencies>
		<dependency>
			<groupId>org.bitbucket.pag_isep.eapliframework</groupId>
			<artifactId>eapli.framework.core</artifactId>
			<version>${eapli.framework.core.version}</version>
		</dependency>
		<dependency>
			<groupId>org.bitbucket.pag_isep.eapliframework</groupId>
			<artifactId>eapli.framework.infrastructure.authz</artifactId>
			<version>${eapli.framework.authz.version}</version>
		</dependency>
		<dependency>
			<groupId>org.bitbucket.pag_isep.eapliframework</groupId>
			<artifactId>eapli.framework.infrastructure.pubsub</artifactId>
			<version>${eapli.framework.pubsub.version}</version>
		</dependency>
		
		<!-- keep junit4 for now -->
		<dependency>
			<groupId>org.junit.vintage</groupId>
			<artifactId>junit-vintage-engine</artifactId>
			<version>5.8.2</version>
			<scope>test</scope>
		</dependency>
		<!-- support junit5 -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.8.2</version>
			<scope>test</scope>
		</dependency>
		
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>1.4.200</version>
            <scope>runtime</scope>
        </dependency>	
        <dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>2.3.1</version>
		</dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency><!--Necessary to avoid drop-and-create failure with latest spring boot version-->
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-core</artifactId>
                <version>5.4.14.Final</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>
</project>